feat: add photo

--- a/edu/ibm-fullstack-developer/m4/index.html
+++ b/edu/ibm-fullstack-developer/m4/index.html
@@ -31,7 +31,7 @@
 
   <main>
     <section id="about" class="panel">
-      <img class="profile-image" src="https://via.placeholder.com/320x360.png?text=Ivan+Miropolskii" alt="Portrait of Ivan Miropolskii" />
+      <img class="profile-image" src="./photo_2025-12-10_19-36-08.jpg" alt="Portrait of Ivan Miropolskii" />
       <div class="intro">
         <span class="tagline">Austin, Texas · Full Stack Developer</span>
         <h1>Ivan Miropolskii</h1>
